@@ -1,6 +1,8 @@
 type
   TTarget = Record
     id, name, zpage : string;
-    eol, codeorigin : integer;
+    eol: byte;
+    buf,
+    codeorigin : word;
     header          : array[0..15] of string;
   end;
