@@ -1,5 +1,6 @@
 28.02.2023
 - Bugfixes
+- @buf dostępne z poziomu MP (__BUFFER)
 
 24.02.2024
 - optymalizacje fastmul, base\common\byte.asm, base\common\word.asm
